dnl
dnl
dnl configure.in.head:
dnl
dnl $Id:$
dnl
dnl $Log:$
dnl
dnl
dnl
AC_PREREQ(2.13)
AC_INIT(src/xsd-validate.cpp)

AC_PROG_CC
AC_PROG_CPP
AC_PROG_CXX
AC_PROG_INSTALL
AC_PROG_LN_S
AC_PROG_MAKE_SET
AC_PROG_RANLIB
AC_PROG_AWK
AC_CHECK_PROG(MD5SUM,md5sum,md5sum)
AC_CHECK_PROG(GREP,grep,grep)

AC_SYS_LARGEFILE

GTKSWITCHER_MAJOR_VERSION=`cat $srcdir/version-major`
GTKSWITCHER_MINOR_VERSION=`cat $srcdir/version-minor`


GTKSWITCHER_VERSION=$GTKSWITCHER_MAJOR_VERSION.$GTKSWITCHER_MINOR_VERSION

AC_SUBST(GTKSWITCHER_MAJOR_VERSION)
AC_SUBST(GTKSWITCHER_MINOR_VERSION)
AC_SUBST(GTKSWITCHER_VERSION)


VERSION=$GTKSWITCHER_VERSION
PACKAGE=xsd-validate

AM_INIT_AUTOMAKE($PACKAGE,$VERSION)


AM_CONFIG_HEADER(src/config.h)

# Checks for header files.
AC_CHECK_HEADERS([malloc.h])
AC_HEADER_STDC
AC_FUNC_MALLOC

AC_C_INLINE
AC_C_CONST

PKG_CHECK_MODULES(XERCES, xerces-c)
AC_SUBST(XERCES_CFLAGS)
AC_SUBST(XERCES_LIBS)


AC_OUTPUT([Makefile
	   src/Makefile])

